--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.infoCardContainer:hover {
+.infoCardCallActionContainer :global(.vtex-button):hover {
   background-color: white;
 }
 
@@ -30,9 +30,9 @@
 }
 
 .infoCardContainer--vintage {
-  background-color: #edcfd1;
+  background-color: #EDCFD1
 }
 
 .infoCardContainer--metal {
-  background-color: #e1e1e1;
+  background-color: #e1e1e1
 }
